syntax = "proto3";
package MsgPB;

message GameRoomHeartBeatC2S{
    uint32 m_playerId = 1;
    uint64 m_key = 2;
}

message GameRoomHeartBeatS2C{

}