syntax = "proto3";
package MsgPB;

message UserServerHeartBeatC2S{
    uint32 m_playerId = 1;
    int64 m_key = 2;
}

message UserServerHeartBeatS2C{

}

message UserServerRoomHeartBeatRS2S{
    uint32 m_roomID = 1;
    int64 m_key = 2;
}
message UserServerRoomHeartBeatS2RS{
    
}